# user_profile_standard

./: Anchor.toml  Cargo.toml  README.md  \  package-lock.json
app/my-profile/: package-lock.json  package.json
backend/user_profile_backend/: Cargo.toml
backend/user_profile_backend/src/: main.rs
frontend/reputation/: package-lock.json  package.json
frontend/reputation/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/reputation/app/actions/: page.module.css  page.tsx
frontend/reputation/app/components/: Connection.tsx  Container.tsx  Footer.tsx  Header.tsx  RepData.tsx  RepProgData.tsx  ReputationOptionsCard.tsx  (+5 more)
frontend/reputation/pages/: create.tsx
programs/network/: Cargo.toml  README.md
programs/network/src/: lib.rs
programs/privacy_wrapper/: Cargo.toml  README.md
programs/privacy_wrapper/src/: lib.rs
programs/reputation/: Cargo.toml  readme.md
programs/reputation/src/: errors.rs  lib.rs
programs/user_profile_standard/: Cargo.toml  README.md
programs/user_profile_standard/src/: lib.rs
tests/: network.ts  privacy_wrapper.ts  reputation.ts  user_profile_standard.ts
tests/instructions/: addPoints.ts  createRepAccount.ts  createSourceAccount.ts  deleteRepAccount.ts  deleteReputationDataAccount.ts  deleteSourceDataAccount.ts  initializeReputationDataAccount.ts  initializeSourceDataAccount.ts  subtractPoints.ts  updateAttachedAccount.ts
tests/instructions/network/: addToNetwork.ts  createAccount.ts  joinANetwork.ts  registerAsSource.ts  registerNetworkAsSource.ts  register_network_as_source.ts  startNetworkNode.ts
(+58 files in other folders)
